# kiro

./: .env.example  .gitignore  AGENTS.md  Cargo.toml
docs/: code-flattening-guideline.md  payment-flow-sequence-diagram.md  postgres-table-dictionary.md  product-catalog-provider-mapping.md  project-api-contract-standards.md  project-plan-overview.md  (+3 more)
kiro-admin/: Cargo.toml  config.example.toml
kiro-admin/migrations/: 20260404_000001_create_admin_users.sql
kiro-admin/src/: main.rs
kiro-admin/src/application/auth/: mod.rs  password_login.rs
kiro-admin/src/application/product/: mod.rs
kiro-admin/src/application/user/: get_admin_user.rs  list_users.rs  mod.rs  update_user_status.rs
kiro-admin/src/bootstrap/: auth.rs  user.rs
kiro-admin/src/domain/entity/: admin_user.rs  mod.rs  product.rs  user.rs
kiro-admin/src/domain/repository/: admin_user_repository.rs  mod.rs  product_repository.rs  user_repository.rs
kiro-admin/src/domain/service/: admin_password_service.rs  mod.rs
kiro-admin/src/infrastructure/: observability.rs  telemetry.rs
kiro-admin/src/infrastructure/auth/: jwt.rs  mod.rs  password.rs
kiro-admin/src/infrastructure/config/: mod.rs
kiro-admin/src/infrastructure/persistence/: admin_user_repository.rs  mod.rs  product_repository.rs  user_repository.rs
kiro-admin/src/interfaces/: mod.rs
kiro-admin/src/interfaces/controller/: admin_user.rs  auth.rs  health.rs  mod.rs  product.rs  user.rs
kiro-admin/src/interfaces/dto/: admin_user.rs  auth.rs  mod.rs  product.rs  user.rs
kiro-admin/src/interfaces/error/: mod.rs
kiro-admin/src/interfaces/middleware/: mod.rs
kiro-api/: Cargo.toml  config.example.toml
kiro-api/migrations/: 20260421_000002_create_products_and_billing_tables.sql  20260424_000003_create_payment_orders.sql  20260424_000004_create_payment_webhook_events.sql
kiro-api/src/: main.rs
kiro-api/src/application/: mod.rs
kiro-api/src/application/auth/: google_login.rs  mod.rs
kiro-api/src/application/order/: mod.rs
kiro-api/src/application/product/: mod.rs
kiro-api/src/application/product_purchase/: mod.rs
kiro-api/src/application/user/: get_user.rs  mod.rs  update_user.rs
kiro-api/src/bootstrap/: order.rs  product.rs  product_purchase.rs  user.rs
kiro-api/src/domain/entity/: mod.rs  payment_order.rs
kiro-api/src/domain/repository/: mod.rs  payment_order_repository.rs  product_repository.rs
kiro-api/src/infrastructure/: mod.rs
kiro-api/src/infrastructure/auth/: google.rs
kiro-api/src/infrastructure/config/: mod.rs
kiro-api/src/infrastructure/persistence/: mod.rs  payment_order_repository.rs  product_repository.rs  user_repository.rs
kiro-api/src/interfaces/: mod.rs
kiro-api/src/interfaces/controller/: auth.rs  health.rs  mod.rs  order.rs  product.rs  user.rs
kiro-api/src/interfaces/dto/: auth.rs  order.rs  product.rs  user.rs
kiro-api/src/interfaces/error/: mod.rs
kiro-api/src/interfaces/pages/: google_callback.html
(+70 files in other folders)
