[package]
name = "kiro-api"
version.workspace = true
edition.workspace = true

[dependencies]
mimalloc.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
axum.workspace = true
sqlx.workspace = true
redis.workspace = true
tower.workspace = true
uuid.workspace = true
ulid.workspace = true
jsonwebtoken.workspace = true
sha2.workspace = true
hex.workspace = true
rand.workspace = true
reqwest.workspace = true
urlencoding.workspace = true
toml.workspace = true
chrono.workspace = true
tonic.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true
tracing-opentelemetry.workspace = true
